<resources>
    <string name="app_name">Fusa</string>
    <string name="cantidad_contenido_password_caracteres">Minimo 6 caracteres y máximo 20 caracteres.</string>
    <string name="cantidad_contenido_password_letras_mayuscula">Al menos una letra en mayuscula.</string>
    <string name="cantidad_contenido_password_letras_minuscula">Al menos una letra en minuscula.</string>
    <string name="cantidad_contenido_password_numero">Al menos un digito entre 0 - 9.</string>
    <string name="cantidad_contenido_password_simbolos">Al menos un caracter especial (@#$%).</string>
    <string name="cerrar_sesion">Cerrando sesión...</string>
    <string name="cargando">Cargando...</string>
    <string name="mensaje_comprobar_conexion">Comprueba tu conexión y reinténtalo</string>
    <string name="boton_reintentar">Intentar nuevamente</string>
    <string name="sexo_masculino">Masculino</string>
    <string name="sexo_femenino">Femenino</string>
    <string name="configuracion">Configuración</string>
    <string name="configuracion_acerca_nosotros_contenido">"Somos un grupo de estudiante de la Universidad Centroccidental Lisandro Alvarado (UCLA), cual desarrollamos esta aplicación para la Fundación Musical Simón Bolívar (Fundamusical) como asignación de la materia Sistemas de Información. \nSomos mejor conocidos como ENERGY TEAM."</string>
    <string name="configuracion_acerca_nosotros_titulo">Acerca de nosotros</string>
    <string name="configuracion_acerca_version_contenido">"Fusa for Android. \nCopyright © 2014 ENERGY TEAM. \nTodos los derechos reservados. \nFusa for Android es construido usando Open Source Software."</string>
    <string name="configuracion_acerca_version_titulo">Acerca de la versión 1.0</string>
    <string name="configuracion_aplicaciones">Aplicaciones</string>
    <string name="configuracion_aplicaciones_cuentas_enlazadas">Cuentas enlazadas</string>
    <string name="configuracion_ayuda">Ayuda</string>
    <string name="configuracion_ayuda_problema">Informar de un problema</string>
    <string name="configuracion_ayuda_sugerencia">Enviar una sugerencia</string>
    <string name="configuracion_cambiar_password_antigua_contraseña">Antigua contraseña</string>
    <string name="configuracion_cambiar_password_contenido_boton_enviado">Cambio exitoso</string>
    <string name="configuracion_cambiar_password_contenido_boton_error">¡Ups! Error</string>
    <string name="configuracion_cambiar_password_contenido_boton_normal">Cambiar contraseña</string>
    <string name="configuracion_cambiar_password_contraseña">Nueva contraseña</string>
    <string name="configuracion_cambiar_password_repita_contraseña">Repita su nueva contraseña</string>
    <string name="configuracion_cuenta">Cuenta</string>
    <string name="configuracion_cuenta_cambiar_foto">Cambiar foto de perfil</string>
    <string name="configuracion_cuenta_cambiar_password">Cambiar contraseña</string>
    <string name="configuracion_cuenta_cerrar_sesion">Cerrar sesión</string>
    <string name="configuracion_cuenta_contratar">¿Cómo contratar una orquesta?</string>
    <string name="configuracion_cuenta_contribuir">¿Cómo donar un instrumento?</string>
    <string name="configuracion_cuenta_participar">¿Te gustaría enseñar?</string>
    <string name="configuracion_cuenta_postularse">¿Cómo postular a un niño?</string>
    <string name="configuracion_informacion">Información</string>
    <string name="configuracion_informacion_nosotros">Acerca de nosotros</string>
    <string name="configuracion_informacion_version">Acerca de esta versión</string>
    <string name="configuracion_informacion_web">Visita Fundamusical</string>
    <string name="configuracion_informar_problema">¿Qué desea que mejoremos?</string>
    <string name="configuracion_informar_problema_contenido_boton_enviado">¡Gracias!</string>
    <string name="configuracion_informar_problema_contenido_boton_normal">Informar problema</string>
    <string name="configuracion_sugerencia">¿Qué desea que mejoremos?</string>
    <string name="configuracion_sugerencia_contenido_boton_enviado">¡Gracias!</string>
    <string name="configuracion_sugerencia_contenido_boton_normal">Enviar sugerencia</string>
    <string name="contendio_noticia_detalle_action_bar_titulo">Noticia</string>
    <string name="contenido_barra_progreso_estudiante">Progreso Acádemico</string>
    <string name="contenido_barra_progreso_nivel_1">Debes empezar a prácticar</string>
    <string name="contenido_barra_progreso_nivel_2">Estas progresando, sigue así</string>
    <string name="contenido_barra_progreso_nivel_3">Vas muy bien, no detengas el ritmo</string>
    <string name="contenido_barra_progreso_nivel_4">Sigue así, la práctica hace al maestro</string>
    <string name="contenido_barra_progreso_nivel_5">¡Bravo! Tu progreso ha sido excelente</string>
    <string name="contenido_boton_enviado">Enviado</string>
    <string name="contenido_boton_error">Error</string>
    <string name="contenido_boton_normal">Enviar solicitud</string>
    <string name="contenido_calendario_action_bar_titulo">Calendario</string>
    <string name="contenido_comentario_evento_empezar">Califica este evento</string>
    <string name="contenido_evento_action_bar_titulo">Evento</string>
    <string name="contenido_evento_comentarios_tab_titulo">Comentarios</string>
    <string name="contenido_evento_informacion_tab_titulo">Información</string>
    <string name="contenido_evento_participantes_tab_titulo">Participantes</string>
    <string name="contenido_evento_ubicacion_tab_titulo">Ubicación</string>
    <string name="contenido_informacion_evento_descripcion">Descripción:</string>
    <string name="contenido_informacion_evento_descripcion_prueba">Empresas Polar por su grande trayectoria, los invita a participar en su aniversario Nro 110, con música clásica. Niños y jovenes de Fundamusical prestarán un espectaculo sin igual. Te esperamos...</string>
    <string name="contenido_informacion_evento_fecha_prueba">31 de octubre del 2014</string>
    <string name="contenido_informacion_evento_hora">Hora:</string>
    <string name="contenido_informacion_evento_hora_prueba">6:00 pm</string>
    <string name="contenido_informacion_evento_lugar">Lugar:</string>
    <string name="contenido_informacion_evento_lugar_prueba">Teatro Juarez</string>
    <string name="contenido_informacion_evento_repertorio">Repertorio:</string>
    <string name="contenido_informacion_evento_titulo">Titulo:</string>
    <string name="contenido_informacion_evento_titulo_prueba">110vo Aniversario Empresas Polar</string>
    <string name="contenido_información_evento_fecha">Fecha:</string>
    <string name="contenido_noticia_action_bar_titulo">Ultimas Noticias</string>
    <string name="contenido_noticia_fecha_publicacion">Publicado el día</string>
    <string name="contenido_noticia_ver_mas">Ver más...</string>
    <string name="contenido_perfil_action_bar_titulo">Perfil de usuario</string>
    <string name="contenido_perfil_catedra">Catedra actual:</string>
    <string name="contenido_perfil_cedula">Cédula:</string>
    <string name="contenido_perfil_edad">Edad:</string>
    <string name="contenido_perfil_fecha_ingreso">Fecha de ingreso:</string>
    <string name="contenido_perfil_fecha_nacimiento">Fecha de nacimiento:</string>
    <string name="contenido_perfil_instrumento">Instrumento actual:</string>
    <string name="contenido_perfil_orquesta">Orquesta participante:</string>
    <string name="contenido_prestamo_instrumento_action_bar_titulo">Solicitud de Prestamo</string>
    <string name="contenido_prestamo_instrumento_boton">Enviar solicitud</string>
    <string name="contenido_prestamo_instrumento_fecha_emision">Desde la fecha</string>
    <string name="contenido_prestamo_instrumento_fecha_vencimiento">Hasta la fecha</string>
    <string name="contenido_prestamo_instrumento_periodo_fin_semana">Fin de semana</string>
    <string name="contenido_prestamo_instrumento_periodo_vacacional">Vacacional</string>
    <string name="contenido_prestamo_instrumento_tipo">Tipo de instrumento</string>
    <string name="contenido_prestamo_instrumento_titulo_periodo">Periodo de préstamo</string>
    <string name="contenido_titulo_tab_eventos_comentarios">Comentarios</string>
    <string name="contenido_titulo_tab_eventos_informacion">Información</string>
    <string name="contenido_titulo_tab_eventos_participantes">Participantes</string>
    <string name="contenido_titulo_tab_eventos_ubicacion">Ubicación</string>
    <string name="contenido_vista_inicial_contacto">Con nosotros, el proceso de enseñanza en forma continua logrará de su trabajo un aprendizaje constante y significativo</string>
    <string name="contenido_vista_inicial_estudiantes">Bebés, niños y jovenes tienen la oportunidad de desenvolverse en el área musical</string>
    <string name="contenido_vista_inicial_eventos">Los estudiantes tienen la oportunidad de desarrollarse en orquestas pre-infantiles, infantiles y juveniles</string>
    <string name="contenido_vista_inicial_instrumentos">El estudiante se va familiarizando con una variada gama de instrumentos musicales para posterior elección</string>
    <string name="lista_pull">Desliza para refrescar...</string>
    <string name="lista_refresh">Cargando...</string>
    <string name="lista_release">Suelta para refrescar...</string>
    <string name="text_contenido_checkbox_participa_conservatorio_postularse">¿Esta inscrito en el conservatorio?</string>
    <string name="text_contenido_checkbox_participa_coro_postularse">¿Esta inscrito en el coro?</string>
    <string name="text_contenido_checkbox_posee_beca_postularse">¿Posee una beca?</string>
    <string name="text_contenido_checkbox_posee_instrumento_postularse">¿Posee instrumento propio?</string>
    <string name="texto_boton_crear_cuenta_datos_alumno">Enviar solicitud</string>
    <string name="texto_boton_restaurar">Restaurar contraseña</string>
    <string name="texto_contenido_datos_evento_contrataciones">Datos del evento</string>
    <string name="texto_contenido_direccion_contacto">Av. Madrid con calle Capanaparo, Urb. Santa Elena. Conservatorio de música Vicente Emilio Sojo, sede del Fundamusical del Estado Lara.</string>
    <string name="texto_contenido_editext_apellido_postularse">Apellido</string>
    <string name="texto_contenido_editext_nombre_postularse">Nombre</string>
    <string name="texto_contenido_editext_rif_cedula_contrataciones">Rif o cédula</string>
    <string name="texto_contenido_editext_solicitante_contrataciones">Solicitante</string>
    <string name="texto_contenido_edittext_correo_contrataciones">Correo electrónico</string>
    <string name="texto_contenido_edittext_correo_postularse">Correo electrónico</string>
    <string name="texto_contenido_edittext_fecha_contrataciones">Fecha</string>
    <string name="texto_contenido_edittext_fecha_nacimiento_postularse">Fecha de nacimiento</string>
    <string name="texto_contenido_edittext_hora_contrataciones">Hora</string>
    <string name="texto_contenido_edittext_lugar_contrataciones">Lugar</string>
    <string name="texto_contenido_edittext_tema_contrataciones">Tema</string>
    <string name="texto_contenido_email_contacto">crlara@fundamusical.org.ve</string>
    <string name="texto_contenido_restaurar">¿No tienes una contraseña? No hay problema. Te enviaremos instrucciones para restaurar tu contraseña.</string>
    <string name="texto_contenido_telefono1_contacto">0251-2676646</string>
    <string name="texto_contenido_telefono2_contacto">0251-2532556</string>
    <string name="texto_contenido_titulo_correo_contacto">Correo electrónico:</string>
    <string name="texto_contenido_titulo_direccion_contacto">Dirección:</string>
    <string name="texto_contenido_titulo_telefono_contacto">Teléfonos:</string>
    <string name="texto_contenito_edittex_correo_restaurar">Correo electrónico</string>
    <string name="titulo_action_bar_restaurar">¿Olvidaste tu contraseña?</string>
</resources>