<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_titulo"
            android:textSize="18sp"
            android:textColor="@color/azul_oscuro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_titulo_prueba"
            android:textSize="16sp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_descripcion"
            android:textSize="18sp"
            android:textColor="@color/azul_oscuro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_descripcion_prueba"
            android:textSize="16sp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_información_evento_fecha"
            android:textSize="18sp"
            android:textColor="@color/azul_oscuro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_fecha_prueba"
            android:textSize="16sp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_hora"
            android:textSize="18sp"
            android:textColor="@color/azul_oscuro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_hora_prueba"
            android:textSize="16sp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_lugar"
            android:textSize="18sp"
            android:textColor="@color/azul_oscuro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_lugar_prueba"
            android:textSize="16sp"
            android:layout_margin="5dp"/>

    </LinearLayout>
</ScrollView>