<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/blanco"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="20.0dip"
        android:paddingTop="10.0dip"
        android:paddingRight="20.0dip"
        android:paddingBottom="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/azul_oscuro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_titulo" />
        <TextView
            android:textSize="16.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/contenido_informacion_evento_titulo_prueba" />
        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/azul_oscuro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_descripcion" />
        <TextView
            android:textSize="16.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/contenido_informacion_evento_descripcion_prueba" />
        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/azul_oscuro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_información_evento_fecha" />
        <TextView
            android:textSize="16.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/contenido_informacion_evento_fecha_prueba" />
        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/azul_oscuro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_hora" />
        <TextView
            android:textSize="16.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/contenido_informacion_evento_hora_prueba" />
        <TextView
            android:textSize="18.0sp"
            android:textColor="@color/azul_oscuro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_informacion_evento_lugar" />
        <TextView
            android:textSize="16.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:text="@string/contenido_informacion_evento_lugar_prueba" />
    </LinearLayout>
</ScrollView>