<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_registrar_postulaciones"
    android:padding="15dp">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_contenido_editext_nombre_postularse"
        android:background="@drawable/style_edit_text_vinotinto"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_contenido_editext_apellido_postularse"
        android:background="@drawable/style_edit_text_vinotinto"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/etFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_contenido_edittext_fecha_nacimiento_postularse"
        android:background="@drawable/style_edit_text_vinotinto"
        android:layout_margin="5dp"/>


    <CheckBox
        android:id="@+id/cbInstrumentoPropio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contenido_checkbox_posee_instrumento_postularse"
        android:button="@drawable/style_checkbox_vinotinto"/>

    <CheckBox
        android:id="@+id/cbConservatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contenido_checkbox_participa_conservatorio_postularse"
        android:button="@drawable/style_checkbox_vinotinto"/>

    <CheckBox
        android:id="@+id/cbCoro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contenido_checkbox_participa_coro_postularse"
        android:button="@drawable/style_checkbox_vinotinto"/>

    <CheckBox
        android:id="@+id/cbBeca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contenido_checkbox_posee_beca_postularse"
        android:button="@drawable/style_checkbox_vinotinto"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_contenido_edittext_correo_postularse"
        android:background="@drawable/style_edit_text_vinotinto"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btnEnviarSolicitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:background="@drawable/style_button_background_white"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/texto_boton_crear_cuenta_datos_alumno"/>

</LinearLayout>