<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@+id/fragment_restaurar"
    android:background="@color/blanco"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/azul"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">
        <ImageView
            android:paddingLeft="5.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:src="@drawable/logo"
            android:scaleType="fitStart"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="16.0dip"
            android:textColor="@color/blanco"
            android:gravity="center_vertical"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/titulo_action_bar_restaurar"
            android:layout_weight="2.0" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">
        <TextView
            android:textSize="18.0sp"
            android:gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/texto_contenido_restaurar" />

        <edu.ucla.fusa.android.modelo.herramientas.FloatingHintEditText
            android:id="@+id/et_email_restaurar_password"
            android:background="@drawable/style_edit_text_azul"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10dp"
            android:hint="@string/texto_contenito_edittex_correo_restaurar"
            android:inputType="textEmailAddress" />
        <com.dd.CircularProgressButton
            android:textSize="22.0sp"
            android:textColor="@color/blanco"
            android:gravity="center"
            android:id="@+id/btn_restaurar_password"
            android:background="@drawable/style_button_background_white"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/texto_boton_restaurar"
            app:cpb_textComplete="@string/contenido_boton_enviado"
            app:cpb_textIdle="@string/contenido_boton_normal"
            app:cpb_textError="@string/contenido_boton_error"
            app:cpb_colorProgress="@color/blanco"
            app:cpb_colorIndicator="@color/azul"
            app:cpb_colorIndicatorBackground="@color/gris"
            app:cpb_selectorComplete="@color/style_btn_circular_progress_verde"
            app:cpb_selectorError="@color/style_btn_circular_progress_rojo"
            app:cpb_selectorIdle="@color/style_btn_circular_progress_azul" />
    </LinearLayout>
</LinearLayout>