<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/fragment_restaurar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_contenido_restaurar"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_contenito_edittex_correo_restaurar"
        android:background="@drawable/style_edit_text_vinotinto"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnRestaurarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:background="@drawable/style_button_background_white"
        android:text="@string/texto_boton_restaurar"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

</LinearLayout>